# venture-lens-

./: .gitignore  CHANGELOG.md  README.md  RELAUNCH.md
backend/: .dockerignore  .env.example  Dockerfile  nixpacks.toml  pyproject.toml  railway.toml
backend/app/: config.py  main.py
backend/app/api/v1/: companies.py  me.py  router.py  scraper.py
backend/app/core/: anthropic.py  auth.py  rate_limit.py  supabase.py
backend/app/intelligence/: scorer.py  summarizer.py
backend/app/scrapers/: producthunt.py  yc.py
backend/app/workers/: pipeline.py
backend/tests/: test_auth.py  test_health.py  test_rate_limit.py
frontend/: .env.local.example  .env.production  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/_auth/: AuthForm.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/companies/: _client.tsx  page.tsx
frontend/src/app/companies/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: Nav.tsx
frontend/src/components/ui/: ScoreBadge.tsx  ScoreRing.tsx  SignalBars.tsx  SourceBadge.tsx
frontend/src/lib/: api-server.ts  api.ts  auth-context.tsx  supabase.ts
frontend/src/lib/supabase/: client.ts  server.ts
frontend/src/types/: company.ts  index.ts
supabase/migrations/: 001_schema.sql  002_rate_limits.sql  003_security_hardening.sql  004_revoke_rls_auto_enable_public.sql
